--- a/Customer Management System(CMS)/src/main/java/in/sarvshiksha/cms/logic/Agent.form
+++ b/Customer Management System(CMS)/src/main/java/in/sarvshiksha/cms/logic/Agent.form
@@ -67,7 +67,7 @@
                   <Component id="nonCriticalIssuesDropDown" min="-2" max="-2" attributes="0"/>
                   <Component id="type1acion" min="-2" pref="102" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="23" max="32767" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="type2action" min="-2" pref="83" max="-2" attributes="0"/>
                   <Component id="criticalissueDropDown" min="-2" pref="196" max="-2" attributes="0"/>
@@ -207,15 +207,13 @@
     <Component class="javax.swing.JComboBox" name="nonCriticalIssuesDropDown">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="8">
+          <StringArray count="6">
             <StringItem index="0" value="Choose an issue"/>
-            <StringItem index="1" value="Delivery_Related_Issue"/>
-            <StringItem index="2" value="Return_Related_Issue"/>
-            <StringItem index="3" value="Offer_Related_Issue"/>
-            <StringItem index="4" value="Payment_Related_Issue"/>
-            <StringItem index="5" value="Account_Related_Issue"/>
-            <StringItem index="6" value="E.M.I_Related_Issue"/>
-            <StringItem index="7" value=" "/>
+            <StringItem index="1" value="DELIVERY_RELATED"/>
+            <StringItem index="2" value="RETURN_RELATED"/>
+            <StringItem index="3" value="PAYMENT_RELATED"/>
+            <StringItem index="4" value="ACCOUNT_RELATED"/>
+            <StringItem index="5" value="EMI_RELATED"/>
           </StringArray>
         </Property>
       </Properties>
@@ -230,15 +228,19 @@
     <Component class="javax.swing.JComboBox" name="criticalissueDropDown">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="7">
+          <StringArray count="8">
             <StringItem index="0" value="Select_reason"/>
-            <StringItem index="1" value="Technician_related_issue"/>
-            <StringItem index="2" value="Installation_related_issue"/>
-            <StringItem index="3" value="Wishmaster_related_issue"/>
-            <StringItem index="4" value="Customer_Care_Executive_related_issue"/>
-            <StringItem index="5" value="Other_reason"/>
-            <StringItem index="6" value=" "/>
+            <StringItem index="1" value="WISHMASTER_RELATED,"/>
+            <StringItem index="2" value="TECHNICIAN_RELATED,"/>
+            <StringItem index="3" value="CUSTOMER_CARE_RELATED,"/>
+            <StringItem index="4" value="INSTALLATION_RELATED,"/>
+            <StringItem index="5" value="OFFER_RELATED,"/>
+            <StringItem index="6" value="OTHER_CONCERN;"/>
+            <StringItem index="7" value=" "/>
           </StringArray>
+        </Property>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
       <Events>
